--- a/css/style.css
+++ b/css/style.css
@@ -5,8 +5,7 @@
 }
 
 body {
-  margin-top: 100px;
-  margin-bottom: 30px;
+  margin: 100px 0;
 }
 
 h1,
@@ -18,6 +17,7 @@ h3 {
 h1 {
   font-size: 96px;
 }
+
 
 h2 {
   font-size: 48px;
@@ -107,4 +107,25 @@ a:hover {
   background: var(--primary-color);
   box-shadow: var(--box-shadow);
   color: white;
+}
+
+@media (max-width:576px) {
+  h1 {
+    font-size: 48px;
+    line-height: 1.5;
+  }
+
+  h2 {
+    font-size: 32px;
+    text-align: center;
+  }
+
+  p {
+    text-align: center;
+  }
+  .button-links {
+    display: block;
+  text-align: center;
+  margin: 0 30px;
+  }
 }
